# node-mmkv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.d.ts  index.js  package.json
.github/workflows/: npm-publish.yml  test.yml
demo/: demo.js  test.js
scripts/: postinstall.js
src/: MMKVModule.cc  MMKVModule.h
test/: index.test.js
test/storage/: mmkv.test  mmkv.test.crc
